# rf-libraries-workshop

./: README.md  requirements.txt
api_example/libs/employees_api/: employees_api.py  gen_config.yml  generate.sh
api_example/tests/: test.robot
examples/1_static_libs/0_modules_simple/: my_lib.py  test.robot
examples/1_static_libs/1_modules_playwright/libs/: playwright_manager.py  sausedemo.py
examples/1_static_libs/1_modules_playwright/tests/: test.robot
examples/1_static_libs/2_classes/0_classes_simple/: MyLib.py  test.robot
examples/1_static_libs/2_classes/1_classes_playwright/keywords/: common.resource
examples/2_dynamic_api/: readme.md
examples/2_dynamic_api/libs/: 1_simple_lib.py  2_simple_lib_using_interfaces.py
examples/2_dynamic_api/tests/: test.robot
examples/3_hybrid_api/libs/: my_lib.py
examples/3_hybrid_api/tests/: test.robot
examples/4_publishing/my_library/: pyproject.toml  requirements.txt
examples/4_publishing/my_library/src/MyLibrary/: __init__.py  libcore.py
large_exercises/1_rest_api_python/libs/employees_api/: employees_api.py
large_exercises/1_rest_api_python/tests/: test.robot
large_exercises/2_dynamic_lib_xmlrpc/libs/: employees_library.py
large_exercises/2_dynamic_lib_xmlrpc/libs/scripts/: create_employee.script  get_all_employees.script  get_employee_data.script
large_exercises/2_dynamic_lib_xmlrpc/sut/: employees_xmlrpc_sut.py  simple_client.py
large_exercises/3_remote_lib_interface/: xmlrpc_server.py
publish_example/my_library/: libcore.py  utils.py
publishing_example/my_library/: __init__.py
(+9 files in other folders)
