[build-system]
requires = [
    "setuptools>=61.0",
    "robotframework"
    ]
build-backend = "setuptools.build_meta"

[project]
name = "my-awesome-library"
authors = [{name="Andre Mochinin", email="mochinin@gmail.com"},
]
description = "My Awesome Library for Robot Framework"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "robotframework"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
license = {text = "Apache License 2.0"}
dynamic = ["version"]

[project.urls]
"Homepage" = "https://github.com/amochin/my-awesome-library"

[tool.setuptools.dynamic]
version = {attr = "MyAwesomeLibrary.__version__"}

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120
